# dw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  TESTING.md  dw-cli-future-scope.md  eval.jsonl  install.sh  justfile  release-please-config.json  results-qwen-qwen3-vl-235b-a22b-instruct-fp8.jsonl  results-qwen-qwen3-vl-30b-a3b-instruct-fp8.jsonl
.github/workflows/: ci.yml  docs.yaml  pr-title-check.yml  release-please.yml  release.yml
bindings/python/: MANIFEST.in  README.md  build_wheel.py  pyproject.toml  setup.py
bindings/python/dw_cli/: __init__.py  __main__.py
bindings/python/dw_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
crates/dw-cli/: Cargo.toml
crates/dw-cli/src/: cli.rs  config.rs  main.rs  output.rs
crates/dw-cli/src/commands/: account.rs  auth.rs  batches.rs  config.rs  examples.rs  files.rs  keys.rs  mod.rs  models.rs  project.rs  realtime.rs  stream.rs  update.rs  usage.rs  webhooks.rs
crates/dw-cli/src/jsonl/: mod.rs
crates/dw-client/: Cargo.toml
crates/dw-client/src/: client.rs  error.rs  lib.rs
crates/dw-client/src/endpoints/: batches.rs  files.rs  keys.rs  mod.rs  models.rs  organizations.rs  usage.rs  users.rs  webhooks.rs
crates/dw-client/src/types/: batches.rs  common.rs  files.rs  keys.rs  mod.rs  models.rs  organizations.rs  usage.rs  users.rs  webhooks.rs
docs/: book.toml
docs/book/: 404.html  accounts.html  authentication.html  batches.html  commands.html  examples.html  file-tools.html  global-flags.html  installation.html  introduction.html  jsonl-format.html  keys-webhooks.html  print.html  projects.html  quickstart.html  realtime.html  searcher-c2a407aa.js  searchindex-51b082e1.js  streaming.html  toc-b135c075.js  toc.html  usage.html
docs/src/: SUMMARY.md  accounts.md  authentication.md  batches.md  commands.md  examples.md  file-tools.md  global-flags.md  installation.md  introduction.md  jsonl-format.md  keys-webhooks.md  projects.md  quickstart.md  realtime.md  streaming.md  usage.md
scripts/: validate-types.py
