[workspace]
members = ["crates/dw-client", "crates/dw-cli"]
resolver = "2"

[workspace.package]
version = "0.1.16"
edition = "2024"
license = "MIT"
repository = "https://github.com/doublewordai/dw"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
