[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-cli"
version = "0.1.14"
description = "Doubleword Batch Inference CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Doubleword", email = "engineering@doubleword.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]

[project.scripts]
dw = "dw_cli:main"

[project.urls]
Homepage = "https://doubleword.ai"
Repository = "https://github.com/doublewordai/dw"

[tool.setuptools.packages.find]
where = ["."]
include = ["dw_cli*"]
