[package]
name = "dw-cli"
description = "Doubleword Batch Inference CLI"
# Explicit version (not workspace) — release-please cannot parse version.workspace = true.
# The cargo-workspace plugin keeps all crate versions in sync on release.
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dw"
path = "src/main.rs"

[dependencies]
dw-client = { path = "../dw-client" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
toml = "0.8"
dirs = "6"
indicatif = "0.17"
comfy-table = "7"
colored = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
rand = "0.9"
base64 = "0.22"
urlencoding = "2"
anyhow = "1"
futures-util = "0.3"
libc = "0.2"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
