[package]
name = "dw-client"
description = "Doubleword API client library"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
bytes = "1"
