[package]
name = "dw-client"
description = "Doubleword API client library"
# Explicit version (not workspace) — release-please cannot parse version.workspace = true.
# The cargo-workspace plugin keeps all crate versions in sync on release.
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
bytes = "1"
